# MacroEdge

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: bias_engine.example.yaml  indicators.example.yaml  indices.example.yaml
docs/: ARCHITECTURE.md  BIAS_ALGORITHM.md  DATABASE_SCHEMA.md  DATA_FLOW.md  DIAGRAMS.md  RISKS.md  ROADMAP.md  TECH_STACK.md
migrations/: 001_initial_schema.sql
scripts/: migrate.py  run_daily.py  run_processing.py  smoke_test.py
services/: __init__.py
services/api/: __init__.py  main.py
services/bias_engine/: __init__.py  run.py  scorer.py  seed_weights.py
services/core/: __init__.py  config.py  db.py
services/ingestion/: __init__.py  job.py  normalizer.py  storage.py
services/ingestion/connectors/: __init__.py  fred.py
services/processing/: __init__.py  surprise.py
tests/: conftest.py  test_api.py
tests/unit/: test_normalizer.py  test_scorer_math.py  test_surprise_math.py
